# fynor-mcp-scorecard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fynor-architecture.html  pyproject.toml
.claude/context/: 00-mission.md  01-architecture.md  02-checks-catalog.md  03-data-schemas.md  04-tech-stack.md  05-build-sequence.md  06-intelligence-layer.md  07-product-interfaces.md  08-ecosystem-protocols.md  09-founder-trajectory.md  10-competitive-strategy.md
.claude/prompts/: new-check.md  new-session.md  review-check.md  write-tests.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_check.md
.github/workflows/: ci.yml
docs/: api-specification.md  architecture-flowchart.html  architecture.md  deployment-architecture.md  privacy-data-handling.md  risk-register.md  sla.md
docs/adr/: ADR-01-architecture-principles.md  ADR-02-scoring-weights.md  ADR-03-check-taxonomy.md  ADR-04-threshold-justification.md
docs/business/: competitive-moat.md  financial-model.md  market-sizing.md
docs/research/: meta-evaluation.md  paper.md
docs/tasks/: api-implementation-contract.md  build-sequence.md  certification-loop-contract.md  check-implementation-contract.md
fynor/: __init__.py  cli.py  history.py  interpretation.py  profiles.py  scorer.py
fynor/adapters/: __init__.py  base.py  graphql.py  grpc.py  mcp.py  rest.py  websocket.py
fynor/api/: auth.py  badges.py  main.py  validators.py  webhooks.py
fynor/brain/: __init__.py  schema.py
fynor/certification/: __init__.py  certificate.py  evaluator.py
fynor/checks/: __init__.py  shared.py
fynor/fynor/: cli.py
fynor/intelligence/: __init__.py  failure_interpreter.py  ontology_updater.py  pattern_detector.py  pattern_learner.py
fynor/monitoring/: __init__.py  decision_logger.py
fynor/ontology/: __init__.py
fynor/report/: __init__.py
fynor/tests/: __init__.py
infra/cloudflare/: SETUP.md  main.tf  outputs.tf  variables.tf
infra/railway/: railway.toml
infrastructure/lambdas/: cert_evaluator.py
tests/: __init__.py  test_api_validators.py  test_history.py  test_interpretation.py  test_profiles.py  test_scorer.py  test_scorer_na.py
tests/api/: test_auth.py  test_main.py
tests/certification/: test_badge.py  test_evaluator.py
tests/checks/: test_auth_ssrf.py  (+15 more)
(+34 files in other folders)
