[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fynor"
version = "0.0.1.dev0"
description = "Agent reliability platform — checks every API, MCP, and CLI for agent-readiness"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "click>=8.1",
]

[project.scripts]
fynor = "fynor.cli:main"

[project.urls]
Homepage = "https://github.com/sriramkarthick/fynor-mcp-scorecard"
