[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fynor"
version = "0.1.0-dev"
description = "AI Agent Reliability Platform — checks every API, MCP, and CLI for agent-specific failure modes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

authors = [
    { name = "Sriram Karthick", email = "sriram@fynor.tech" }
]

keywords = [
    "ai-agents", "mcp", "reliability", "agent-ready",
    "model-context-protocol", "api-testing", "llm-infrastructure"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
fynor = "fynor.cli:main"

[project.urls]
Homepage   = "https://github.com/sriramkarthick/fynor-reliability-platform"
Issues     = "https://github.com/sriramkarthick/fynor-reliability-platform/issues"
Changelog  = "https://github.com/sriramkarthick/fynor-reliability-platform/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["fynor*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
